--- a/ui_files/login_form.ui
+++ b/ui_files/login_form.ui
@@ -26,7 +26,7 @@
    <string>Авторизация</string>
   </property>
   <property name="windowIcon">
-   <iconset theme="applications-engineering"/>
+   <iconset theme="applications-internet"/>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -45,19 +45,6 @@
     <number>50</number>
    </property>
    <item row="0" column="0">
-    <widget class="QLabel" name="label_login">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Логин</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
     <widget class="QLineEdit" name="login_text">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -80,22 +67,12 @@
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
+     <property name="placeholderText">
+      <string>Логин</string>
+     </property>
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QLabel" name="label_passw">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Пароль</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
     <widget class="QLineEdit" name="password_text">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -115,9 +92,15 @@
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
      </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="placeholderText">
+      <string>Пароль</string>
+     </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="2" column="0">
     <widget class="QPushButton" name="btn_login">
      <property name="enabled">
       <bool>true</bool>
@@ -133,28 +116,25 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QLabel" name="img_evp">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
+   <item row="3" column="0">
+    <widget class="QLabel" name="evp_img">
      <property name="maximumSize">
       <size>
-       <width>800</width>
-       <height>120</height>
+       <width>1500</width>
+       <height>250</height>
       </size>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap>../../Downloads/Logo.png</pixmap>
+      <pixmap>../Images/Logo_without_font.png</pixmap>
      </property>
      <property name="scaledContents">
-      <bool>true</bool>
+      <bool>false</bool>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
