--- a/ui_files/complete_task.ui
+++ b/ui_files/complete_task.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>583</width>
-    <height>544</height>
+    <width>772</width>
+    <height>743</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,9 +36,15 @@
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="operations">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="maximumSize">
       <size>
-       <width>16777215</width>
+       <width>500</width>
        <height>350</height>
       </size>
      </property>
@@ -58,9 +64,15 @@
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="indicators_label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="maximumSize">
       <size>
-       <width>16777215</width>
+       <width>500</width>
        <height>30</height>
       </size>
      </property>
@@ -80,9 +92,15 @@
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="elimination_task_label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="maximumSize">
       <size>
-       <width>16777215</width>
+       <width>500</width>
        <height>200</height>
       </size>
      </property>
