--- a/ui_files/login_form.ui
+++ b/ui_files/login_form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>908</width>
-    <height>719</height>
+    <width>1180</width>
+    <height>720</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -26,7 +26,8 @@
    <string>Авторизация</string>
   </property>
   <property name="windowIcon">
-   <iconset theme="applications-internet"/>
+   <iconset theme="applications-internet">
+    <normaloff>.</normaloff>.</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
