--- a/ui_files/main_page.ui
+++ b/ui_files/main_page.ui
@@ -149,6 +149,9 @@
           <property name="gridStyle">
            <enum>Qt::DashLine</enum>
           </property>
+          <property name="sortingEnabled">
+           <bool>true</bool>
+          </property>
           <property name="columnCount">
            <number>5</number>
           </property>
@@ -159,7 +162,7 @@
            <bool>true</bool>
           </attribute>
           <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-           <bool>false</bool>
+           <bool>true</bool>
           </attribute>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>false</bool>
