--- a/ui_files/main_page.ui
+++ b/ui_files/main_page.ui
@@ -150,7 +150,7 @@
            <enum>Qt::DashLine</enum>
           </property>
           <property name="sortingEnabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="columnCount">
            <number>5</number>
@@ -162,7 +162,7 @@
            <bool>true</bool>
           </attribute>
           <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-           <bool>true</bool>
+           <bool>false</bool>
           </attribute>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>false</bool>
