--- a/ui_files/main_page.ui
+++ b/ui_files/main_page.ui
@@ -209,56 +209,77 @@
      <string>Отчёты</string>
     </property>
     <addaction name="separator"/>
-    <addaction name="action_2"/>
-    <addaction name="action_3"/>
+    <addaction name="sockets_report"/>
+    <addaction name="tasks_report"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="action_2">
+  <action name="sockets_report">
    <property name="text">
     <string>Отчёт по гнёздам</string>
    </property>
   </action>
-  <action name="action_3">
+  <action name="tasks_report">
    <property name="text">
     <string>Отчёт по задачам</string>
    </property>
   </action>
   <action name="actionTelerobot_1">
    <property name="text">
-    <string>Telerobot 1</string>
+    <string>Телеробот 1</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 1</string>
    </property>
   </action>
   <action name="actionTelerobot_2">
    <property name="text">
-    <string>Telerobot 2</string>
+    <string>Телеробот 2</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 2</string>
    </property>
   </action>
   <action name="actionTelerobot_3">
    <property name="text">
-    <string>Telerobot 3</string>
+    <string>Телеробот 3</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 3</string>
    </property>
   </action>
   <action name="actionTelerobot_4">
    <property name="text">
-    <string>Telerobot 4</string>
+    <string>Телеробот 4</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 4</string>
    </property>
   </action>
   <action name="actionTelerobot_5">
    <property name="text">
-    <string>Telerobot 5</string>
+    <string>Телеробот 5</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 5</string>
    </property>
   </action>
   <action name="actionTelerobot_6">
    <property name="text">
-    <string>Telerobot 6</string>
+    <string>Телеробот 6</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 6</string>
    </property>
   </action>
   <action name="actionTelerobot_7">
    <property name="text">
-    <string>Telerobot 7</string>
+    <string>Телеробот 7</string>
+   </property>
+   <property name="toolTip">
+    <string>Телеробот 7</string>
    </property>
   </action>
  </widget>
